force-app/main/default/objects/Solution__c/Solution__c.object-meta.xml
<CustomObject>
    <label>Solution</label>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>