force-app/main/default/objects/Solution__c/fields/distinctField__c.field-meta.xml
<CustomField>
    <fullName>distinctField__c</fullName>
    <label>distinctField</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>