force-app/main/default/objects/Solution__c/validationRules/Score_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>(Score__c &gt; Assignment__r.Max_Score__c) ||( Score__c &lt;0)</errorConditionFormula>
    <errorMessage>Should not exceed the assignment’s Max Score</errorMessage>
</ValidationRule>